Fix compiler warnings in demos: deprecated APIs
Avoid usage of deprecated APIs where a simple replacement exists.