@@ -166,7 +166,7 @@ public class SliderDemo extends DemoModule {
 
         @SuppressWarnings("unchecked")
 		Dictionary<Object, Object> labelTable = s.getLabelTable();
-        labelTable.put(new Integer(11), new JLabel(new Integer(11).toString(), JLabel.CENTER));
+        labelTable.put(Integer.valueOf(11), new JLabel(Integer.valueOf(11).toString(), JLabel.CENTER));
         s.setLabelTable( s.getLabelTable() );
 
         s.getAccessibleContext().setAccessibleName(getString("SliderDemo.minorticks"));
